# sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN.md  README.md
natureos_sdk/: __init__.py  client.py  exceptions.py
